fix scrollbar positioning

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -13,6 +13,7 @@
     margin-top: 4.125rem;
     max-width: 1024px;
     width: 100%;
+    overflow-x: scroll;
   }
 
   @media screen and (max-width: 900px) {
